--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "redeploy": "npx gh-pages-clean gh-pages -d build && npm run deploy",
     "postdeploy": "git push origin main",
     "start": "react-scripts start",
     "build": "react-scripts build",
