--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "owensimpson.github.io",
+  "name": "personal-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "postdeploy": "git push origin main",
-    "redeploy": "npx gh-pages-clean gh-pages -d build && npm run deploy"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
